feat: add duplicate error
